added option to show results from offset
